--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <div class="large-12 columns">
       	<div class="panel">
 	        <h3>Learn practical tech knowledge to bring home and show off.</h3>
-	        <h1 class="logo">Level Up</h1>
-          <h4>Creative Tech Conference 2014</h4>
-          <h5>In Association with MadGlory</h5>
+	        <h1 class="logo indent">Level Up</h1>
+          <h4 class="indent">Creative Tech Conference 2014</h4>
+          <h5 class="indent">In Association with MadGlory</h5>
           <p><a href="#" class="large button signup">Sign me the hell up</a><br/>
       	</div>
       </div>
