Pull status from new App.net account to get status from Twitter. Closes #1

--- a/index.html
+++ b/index.html
@@ -12,13 +12,25 @@
     <link href='http://fonts.googleapis.com/css?family=Raleway:400,500,600' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
     <script src="js/modernizr.js"></script>
+    <script src="js/jquery.js"></script>
+    <script>
+      $(function(){
+        $.getJSON('https://alpha-api.app.net/stream/0/users/@levelupcon/posts', function(res) {
+          var posts = res.data;
+          
+          if(posts.length > 0){
+            status = $('.feed .status').html(posts[0].text);
+          }
+        });
+      });
+    </script>
   </head>
   <body>
     
     <div class="full-width feed">
       <div class="row">
         <div class="large-12 columns header">
-          <h6>Twitter tweets go here.</h6>
+          <h6 class="status">Follow <a href="http://twitter.com/levelupcon">@levelupcon</a> on Twitter.</h6>
         </div>
       </div>
     </div>
