--- a/index.html
+++ b/index.html
@@ -41,21 +41,22 @@
 
     <div class="row">
       <div class="large-12 columns callout">
-          <p class="callout">Held at <a>Criterion Cinemas 11 &amp; BTX</a> in Saratoga Springs New York, <strong>Level Up</strong> is a creative tech conference that touches on the latest trends in web design &amp; development, with a focus on topics that are immediately applicable to your day job. You’ll be learning new things rather than rehashing what’s already out there. Efficiency level over 9,000.</p>
-          <p class="callout">What to expect, when you’re expecting:</p>
+        <p class="callout">Held at <a>Criterion Cinemas 11 &amp; BTX</a> in Saratoga Springs New York, <strong>Level Up</strong> is a creative tech conference that touches on the latest trends in web design &amp; development, with a focus on topics that are immediately applicable to your day job. You’ll be learning new things rather than rehashing what’s already out there. Efficiency level over 9,000.</p>
+        <p class="callout">What to expect, when you’re expecting:</p>
+        <br>
         <div class="row">
             <div class="large-4 medium-4 columns">
-              <h5>Two Heads > Over</h5>
+              <h5 class="speakers">Two Heads > Over</h5>
               <h6>Twice the speakers for your buck.</h6>
               <p>Rather than having all the focus on you, why not grab a friend? The ability to entertain two speakers at the same time allows for an interesting talk. Designers with Developers, two developers, two designers, or be a solo superstar – we’re open to it all.</p>
             </div>
             <div class="large-4 medium-4 columns">
-              <h5>Designer Insight</h5>
+              <h5 class="designers">Designer Insight</h5>
               <h6>Not a photoshop 101 class.</h6>
               <p>Anyone can find tutorials on how to add drop shadows to text (please don't). What we're preaching here is a little deeper than that – developers and designers alike stand to learn a thing or two about process and secret designer things.</p>
             </div>
             <div class="large-4 medium-4 columns">
-              <h5>Sweat the Technique</h5>
+              <h5 class="developers">Sweat the Technique</h5>
               <h6>New School Development Trends</h6>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>        
@@ -65,25 +66,33 @@
     
     <div class="full-width signup">
       <div class="row">
-        <div class="large-12 columns">
-          <div class="row">
-            <div class="large-5 medium-5 columns">
-              <img src="../img/calendar-date-1.png" class="">
-              <img src="../img/calendar-date-2.png" class="">
+        <div class="large-12 columns info">
+          <div class="row ">
+            <div class="large-4 medium-4 columns">
+              <img src="../img/calendar-date-1.png" class="left">
+              <img src="../img/calendar-date-2.png" class="right">
             </div>
-            <div class="large-2 medium-2 columns">
-              
+            <div class="large-4 medium-4 columns">
+              test
             </div>
-            <div class="large-5 medium-5 columns">
+            <div class="large-4 medium-4 columns">
               <div class="row">
-                <p><a href="#" class="x-large button signup">Sign me the hell up</a><br/>
+                <p><a href="#" class="large button signup">Sign me the hell up</a><br/>
               </div>
               <div class="row">
-                <a href="#" class="small button signup">Press Packet</a>
-                <a href="#" class="small button signup">Apply to Speak</a>
+                <a href="#" class="tiny button signup left alt">Press Packet</a>
+                <a href="#" class="tiny button signup right alt">Apply to Speak</a>
               </div>
             </div>
           </div>  
+        </div>
+      </div>
+    </div>
+
+    <div class="full-width">
+      <div class="row">
+        <div class="large-12 columns">
+          <h4>Speakers, Sponsors, and Complete Schedule coming soon.</h4>
         </div>
       </div>
     </div>
