Added signup modal with styles

--- a/index.html
+++ b/index.html
@@ -32,8 +32,25 @@
             <h4 class="indent">Creative Tech Conference 2014</h4>
             <h5 class="indent">In Association with MadGlory</h5>
             <div class="medium-4 medium-centered columns">
-              <a href="#" class="large button signup">Sign me the hell up</a>
+              <a href="#" data-reveal-id="firstModal" class="large button signup">Sign me the hell up</a>
+              <div id="firstModal" class="reveal-modal small" data-reveal>
+                <h3><strong>The early bird gets the worm.</strong></h3>
+                <br>
+                <p><strong>Level Up</strong> will be open for registration soon. In the meantime, sign up to stay updated – that way, you'll be the first to know when registration opens.</p>
+                <p>If you're interested in being a Speaker, you can <a>Apply Here.</a>
+                <br>If you're interested in Sponsoring, <a>Download a Press Kit.</a></p>
+                <form>
+                  <div class="row">
+                    <input type="text" placeholder="Full Name*" class="large" />
+                    <input type="text" placeholder="Company Website" class="large" />
+                    <input type="text" placeholder="Email*" class="large" />
+                    <a href="#" class="large button signup">Submit</a>
+                  </div>
+                </form>
+                <a class="close-reveal-modal">&#215;</a>
+              </div>
             </div>
+            
             <br>
       	  </div>
         </div>
@@ -72,14 +89,32 @@
           <div class="row ">
             <div class="large-4 medium-4 columns">
               <img src="../img/calendar-date-1.png" class="left">
-              <img src="../img/calendar-date-2.png" class="right">
+<!--               <p><small>8am - 4pm</small></p>
+ -->              <img src="../img/calendar-date-2.png" class="right">
             </div>
             <div class="large-4 medium-4 columns">
               
             </div>
             <div class="large-4 medium-4 columns">
               <div class="row">
-                <p><a href="#" class="large button signup">Sign me the hell up</a><br/>
+                <p><a href="#" data-reveal-id="firstModal" class="large button signup">Sign me the hell up</a>
+                <div id="firstModal" class="reveal-modal small" data-reveal>
+                  <h3><strong>The early bird gets the worm.</strong></h3>
+                  <br>
+                  <p><strong>Level Up</strong> will be open for registration soon. In the meantime, sign up to stay updated – that way, you'll be the first to know when registration opens.</p>
+                  <p>If you're interested in being a Speaker, you can <a>Apply Here.</a>
+                  <br>If you're interested in Sponsoring, <a>Download a Press Kit.</a></p>
+                  <form>
+                    <div class="row">
+                      <input type="text" placeholder="Full Name*" class="large" />
+                      <input type="text" placeholder="Company Website" class="large" />
+                      <input type="text" placeholder="Email*" class="large" />
+                      <a href="#" class="large button signup">Submit</a>
+                    </div>
+                  </form>
+                  <a class="close-reveal-modal">&#215;</a>
+                </div>
+                <br/>
               </div>
               <div class="row">
                 <a href="#" class="tiny button signup left alt">Press Packet</a>
