--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         <div class="large-12 columns">
       	  <div class="">
 	          <h3>Learn practical tech knowledge to bring home and show off.</h3>
-	          <h1 class="logo indent">Level Up</h1>
+	          <h1 class="indent">Level Up</h1>
+            <img data-interchange="[../img/logo-lg.png, (retina)]" class="logo" >
             <h4 class="indent">Creative Tech Conference 2014</h4>
             <h5 class="indent">In Association with MadGlory</h5>
             <div class="medium-4 medium-centered columns">
@@ -156,6 +157,8 @@
     </div>
     
     <script src="js/jquery.js"></script>
+    <script src="js/foundation/foundation.js"></script>
+    <script src="js/foundation/foundation.interchange.js"></script>
     <script src="js/foundation.min.js"></script>
     <script>
       $(document).foundation();
