--- a/index.html
+++ b/index.html
@@ -89,9 +89,11 @@
         <div class="large-12 columns info">
           <div class="row ">
             <div class="large-4 medium-4 columns">
-              <img src="../img/calendar-date-1.png" class="left">
-<!--               <p><small>8am - 4pm</small></p>
- -->              <img src="../img/calendar-date-2.png" class="right">
+              <a href="Level_Up_Conference.ics">
+                <img src="../img/calendar-date-1.png" class="left">
+                <!--<p><small>8am - 4pm</small></p>-->
+                <img src="../img/calendar-date-2.png" class="right">
+              </a>
             </div>
             <div class="large-4 medium-4 columns">
               
