Retina imgs and calendar events

--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
           <div class="row ">
             <div class="large-4 medium-4 columns">
               <a href="Level_Up_Conference.ics">
-                <img src="../img/calendar-date-1.png" class="left">
+                <img src="../img/october-8.png" class="left date">
                 <!--<p><small>8am - 4pm</small></p>-->
-                <img src="../img/calendar-date-2.png" class="right">
+                <img src="../img/october-9.png" class="right date">
               </a>
             </div>
             <div class="large-4 medium-4 columns">
