Header styles/Twitter links

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     
     <div class="full-width feed">
       <div class="row">
-        <div class="large-12 columns header">
+        <div class="small-12 columns">
+          <a href="http://twitter.com/madglory" target="_blank" class="twitter"><img src="../img/twitter-icon.png" class=""></a>
+          
           <h6 class="status">Follow <a href="http://twitter.com/levelupcon">@levelupcon</a> on Twitter.</h6>
         </div>
       </div>
@@ -29,7 +31,8 @@
       	  <div class="">
 	          <h3>Learn practical tech knowledge to bring home and show off.</h3>
 	          <h1 class="indent">Level Up</h1>
-            <img data-interchange="[../img/logo-lg.png, (retina)]" class="logo" >
+            <img data-interchange="[../img/logo-lg.png, (default)], [../img/logo-lg.png, (retina)]" class="logo" >
+            <noscript><img src="../img/logo-lg.png"></noscript>
             <h4 class="indent">Creative Tech Conference 2014</h4>
             <h5 class="indent">In Association with MadGlory</h5>
             <div class="medium-4 medium-centered columns">
@@ -68,7 +71,7 @@
     <br>
     <div class="row">
       <div class="large-12 columns callout">
-        <p>Held at <a>Criterion Cinemas 11 &amp; BTX</a> in Saratoga Springs New York, <strong>Level Up</strong> is a creative tech conference that touches on the latest trends in web design &amp; development, with a focus on topics that are immediately applicable to your day job. You’ll be learning new things rather than rehashing what’s already out there. Efficiency level over 9,000.</p>
+        <p class="lead">Held at <a>Criterion Cinemas 11 &amp; BTX</a> in Saratoga Springs New York, <strong>Level Up</strong> is a creative tech conference that touches on the latest trends in web design &amp; development, with a focus on topics that are immediately applicable to your day job. You’ll be learning new things rather than rehashing what’s already out there. Efficiency level over 9,000.</p>
         <p>What to expect, when you're expecting:</p>
         <br>
         <div class="row">
@@ -107,7 +110,7 @@
             </div>
             <div class="large-4 medium-4 columns">
               <div class="row">
-                <p><a href="#" data-reveal-id="firstModal" class="large button signup">Sign me the hell up</a>
+                <a href="#" data-reveal-id="firstModal" class="large button signup">Sign me the hell up</a>
                 <div id="firstModal" class="reveal-modal small" data-reveal>
                   <h3><strong>The early bird gets the worm.</strong></h3>
                   <br>
