--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             
             <!-- Responsive retina image media queries -->
 
-            <img data-interchange="[../img/logo-lg.png, (default)], [../img/logo-lg.png, (retina)]" class="logo" >
-            <noscript><img src="../img/logo-lg.png"></noscript>
+            <img data-interchange="[/img/logo-lg.png, (default)], [/img/logo-lg.png, (retina)]" class="logo" >
+            <noscript><img src="/img/logo-lg.png"></noscript>
             <h4 class="indent">Creative Tech Conference 2014</h4>
             <h5 class="indent">In Association with MadGlory</h5>
             <div class="medium-4 medium-centered columns">
