--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
             <!-- Responsive retina image media queries -->
 
-            <img src="/img/logo-lg.png" data-interchange="[/img/logo-lg.png, (default)], [/img/logo-lg.png, (retina)]" class="logo" >
+            <img src="/img/logo-lg.png" data-interchange="[/img/logo-lg.png, (default)], [/img/logo-lg@2x.png, (retina)]" class="logo" >
             <noscript><img src="/img/logo-lg.png"></noscript>
             <h4 class="indent">Creative Tech Conference 2014</h4>
             <h5 class="indent">In Association with MadGlory</h5>
