--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="large-4 medium-4 columns">
               <h5 class="developers">Sweat the Technique</h5>
               <h6>New School Development Trends</h6>
-              <p class="medium">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+              <p class="medium">See practical uses of all the hottest tech and programming trends. When the conference is over you should be comfortable enough to go back to work and use these tools IMMEDIATELY! Show your boss the conference was worth it!</p>
             </div>
           </div>
       </div>
