--- a/index.html
+++ b/index.html
@@ -4,13 +4,22 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Level Up Con 2014</title>
-    <META NAME="ROBOTS" CONTENT="NOINDEX, FOLLOW">
-    <META NAME="ROBOTS" CONTENT="INDEX, NOFOLLOW">
-    <META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
+    <meta name="robots" content="noindex, nofollow">
+    <link rel="icon" type="image/x-icon"                     href="img/favicon16x16.png">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/favicon144x144.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/favicon114x114.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72"   href="img/favicon72x72.png">
+    <link rel="apple-touch-icon-precomposed"                 href="img/favicon57x57.png">
     <link rel="stylesheet" href="css/foundation.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link href='http://fonts.googleapis.com/css?family=Raleway:400,500,600' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800' rel='stylesheet' type='text/css'>
+
+    <meta name="description" content="A conference about JavaScript, CSS, components, grid and more." />
+
+    <meta name="author" content="MadGlory Interactive LLC., also includes madglory.com" />
+    <meta name="copyright" content="MadGlory Interactive, LLC. Copyright (c) 2014" />
+
     <script src="js/modernizr.js"></script>
   </head>
 
@@ -31,7 +40,7 @@
       <div class="row">
         <div class="large-12 columns">
       	  <div class="">
-	          <h3>Learn practical tech knowledge to bring home and show off.</h3>
+	          <h3>Learn cutting edge tips and tricks to bring home and show off.</h3>
 	          <h1 class="indent">Level Up</h1>
 
             <!-- Responsive retina image media queries -->
@@ -39,12 +48,12 @@
             <img src="/img/logo-lg.png" data-interchange="[/img/logo-lg.png, (default)], [/img/logo-lg@2x.png, (retina)]" class="logo" >
             <noscript><img src="/img/logo-lg.png"></noscript>
             <h4 class="indent">Creative Tech Conference 2014</h4>
-            <h5 class="indent">In Association with MadGlory</h5>
+            <h5 class="indent">In Association with <a href="http://www.madglory.com">MadGlory</a></h5>
             <div class="medium-4 medium-centered columns">
 
               <!-- Sign up modal form -->
 
-              <a href="#" data-reveal-id="firstModal" class="large button signup">Sign me the hell up</a>
+              <a href="#" data-reveal-id="firstModal" class="large button signup">Tell me more</a>
               <div id="firstModal" class="reveal-modal small" data-reveal>
                 <h3><strong>The early bird gets the worm.</strong></h3>
                 <br>
@@ -84,25 +93,79 @@
     <br>
     <div class="row">
       <div class="large-12 columns callout">
-        <p class="lead">Held at <a>Criterion Cinemas 11 &amp; BTX</a> in Saratoga Springs New York, <strong>Level Up</strong> is a creative tech conference that touches on the latest trends in web design &amp; development, with a focus on topics that are immediately applicable to your day job. You’ll be learning new things rather than rehashing what’s already out there. Efficiency level over 9,000.</p>
-        <p>What to expect, when you're expecting:</p>
-        <br>
+        <p class="lead">
+          <strong>Level Up</strong> is a creative tech conference where you'll <strong>explore
+          the latest trends in web design &amp; development</strong> with a focus
+          on topics that are           <strong>practical</strong> and           <strong>immediately valuable</strong> to
+          your everyday work. You'll meet interesting people, make new friends,
+          and learn new skills you can show off at home.
+        </p>
+        <p class="lead">
+          It's a <strong>unique event</strong> happening in famous resort town located only 3 hours
+          from both New York and Boston. LevelUp will be an <strong>intimate
+          affair</strong> and so tickets are extremely limited.
+        </p>
+        <p class="lead text-center">
+          Register today to find out more!
+        </p>
         <hr>
         <div class="row">
             <div class="large-4 medium-4 columns">
-              <h5 class="speakers">Two Heads > Over</h5>
+              <h5 class="speakers">Cross Train</h5>
               <h6>Twice the speakers for your buck.</h6>
-              <p class="medium">Rather than having all the focus on you, why not grab a friend? The ability to entertain two speakers at the same time allows for an interesting talk. Designers with Developers, two developers, two designers, or be a solo superstar – we're open to it all.</p>
+              <p class="medium">
+                Modern web designers &amp; developers must be interested and
+                involved in a wide range of subject areas to excel in their craft.  Moreover,
+                that cross-pollination of expertise is one of the driving forces behind the
+                rate of change in our craft.
+              </p>
+              <p class="medium">
+                Because of this, the topics at Level Up are purposefully varied in subject but
+                share a the common theme that each both practical and immediately applicable to
+                your everyday work.  A wide range of topics will be explored including everything
+                from server side javascript, container virtualization, and client side MVC
+                frameworks alongside topics like how innovative products can use innovative design
+                to drive interest and engagement.
+              </p>
             </div>
             <div class="large-4 medium-4 columns">
-              <h5 class="designers">Designer Insight</h5>
-              <h6>Not a photoshop 101 class.</h6>
-              <p class="medium">Anyone can find tutorials on how to add drop shadows to text (please don't). What we're preaching here is a little deeper than that – developers and designers alike stand to learn a thing or two about process and secret designer things.</p>
+              <h5 class="designers">Power Packed</h5>
+              <h6>Prepare for a knowledge bomb</h6>
+              <p class="medium">
+                The conference will happen over two days and follow a single track,
+                mixed length format.
+              </p>
+              <p class="medium">
+                Topics will be short and focused; each between 20 and 40 minutes
+                long. Each speaker will have full knowledge of those that present
+                before them, and will attempt to build off the concepts conveyed
+                by previous speakers. Plenty of time will be allotted after each
+                talk for for questions and discussion.
+              </p>
+              <p class="medium">
+                Finally, local foodies will prepare lunch and snacks each day to
+                to ensure everyone is properly satiated (and hydrated!)
+              </p>
             </div>
             <div class="large-4 medium-4 columns">
-              <h5 class="developers">Sweat the Technique</h5>
-              <h6>New School Development Trends</h6>
-              <p class="medium">See practical uses of all the hottest tech and programming trends. When the conference is over you should be comfortable enough to go back to work and use these tools IMMEDIATELY! Show your boss the conference was worth it!</p>
+              <h5 class="developers">An Intimate Experience</h5>
+              <h6>Guaranteed to meet new people</h6>
+              <p class="medium">
+                Top down we've designed Level Up to be an inspirational experience.
+                The venue is located walking distance from both the hotel and a
+                vibrant downtown district where you can eat, shop, or grab a beer
+                at any one of three dozen local pubs.
+              </p>
+              <p class="medium">
+                Attendee only social events are scheduled each
+                night to ensure that we'll get to know each other, have time to
+                discuss the topics we've learned, and have a bit of fun.
+              </p>
+              <p class="medium">
+                Last, you'll enjoy the beautiful resort town of Saratoga during
+                the peak of New York's Fall Season. (And if you enjoy the outdoors,
+                you're only a 30 minutes from the biggest park in lower United States.)
+              </p>
             </div>
           </div>
       </div>
@@ -125,7 +188,7 @@
             </div>
             <div class="large-4 medium-4 columns">
               <div class="row">
-                <a href="#" data-reveal-id="firstModal" class="large button signup">Sign me the hell up</a>
+                <a href="#" data-reveal-id="firstModal" class="large button signup">Tell me more</a>
                 <div id="firstModal" class="reveal-modal small" data-reveal>
                   <h3><strong>The early bird gets the worm.</strong></h3>
                   <br>
@@ -157,7 +220,7 @@
     <div class="full-width">
       <div class="row">
         <div class="large-12 columns">
-          <h4>Speakers, Sponsors, and Complete Schedule coming soon.</h4>
+          <h4>Sign up for more info about speakers, sponsors, and schedule as it becomes available.</h4>
         </div>
       </div>
     </div>
@@ -165,10 +228,12 @@
     <div class="full-width footer">
       <div class="row">
         <div class="medium-4 medium-centered columns address">
-          <p><a href="http://www.bowtiecinemas.com/locations/criterion-cinemas-11-btx/" target="_blank"><span>Criterion Cinemas 11 &amp; BTX</span></a><br>
+          <p>
+            <a href="http://www.bowtiecinemas.com/locations/criterion-cinemas-11-btx/" target="_blank"><span>Criterion Cinemas</span></a><br>
             19 Railroad Place<br>
-            Saratoga Springs, NY 12866</p>
-            <img src="../img/pinpoint.png" class="pinpoint">
+            Saratoga Springs, NY 12866
+          </p>
+          <img src="../img/pinpoint.png" class="pinpoint">
         </div>
       </div>
     </div>
