Updates levelup copy

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Level Up Con 2014</title>
+    <title>Level Up Conference 2014: Practical Web Conference</title>
     <meta name="robots" content="noindex, nofollow">
     <link rel="icon" type="image/x-icon"                     href="img/favicon16x16.png">
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/favicon144x144.png">
@@ -163,8 +163,8 @@
               </p>
               <p class="medium">
                 Last, you'll enjoy the beautiful resort town of Saratoga during
-                the peak of New York's Fall Season. (And if you enjoy the outdoors,
-                you're only a 30 minutes from the biggest park in lower United States.)
+                the peak of <a href='https://www.google.com/search?q=new+york+fall+leaves&espv=210&es_sm=119&source=lnms&tbm=isch&sa=X&ei=C0_ZUrO_DPe0sATAzoDQAw&ved=0CAcQ_AUoAQ&biw=1920&bih=1008'>New York's Fall Season</a>. (And if you enjoy the outdoors,
+                you're only a 30 minutes from the <a href='http://visitadirondacks.com/'>biggest park</a> in lower United States.)
               </p>
             </div>
           </div>
@@ -227,11 +227,11 @@
 
     <div class="full-width footer">
       <div class="row">
-        <div class="medium-4 medium-centered columns address">
+        <div class="medium-3 medium-centered columns address">
           <p>
-            <a href="http://www.bowtiecinemas.com/locations/criterion-cinemas-11-btx/" target="_blank"><span>Criterion Cinemas</span></a><br>
-            19 Railroad Place<br>
-            Saratoga Springs, NY 12866
+            <!-- <a href="http://www.bowtiecinemas.com/locations/criterion-cinemas-11-btx/" target="_blank"><span>Criterion Cinemas</span></a><br>
+            19 Railroad Place<br>-->
+            <a href='http://goo.gl/maps/qz3vB'>Saratoga Springs, NY</a>
           </p>
           <img src="../img/pinpoint.png" class="pinpoint">
         </div>
