--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                 <h3><strong>The early bird gets the worm.</strong></h3>
                 <br>
                 <p><strong>Level Up</strong> will be open for registration soon. In the meantime, sign up to stay updated – that way, you'll be the first to know when registration opens.</p>
-                <p>If you're interested in being a Speaker, you can <a>Apply Here.</a>
-                <br>If you're interested in Sponsoring, <a>Download a Press Kit.</a></p>
+                <!-- <p>If you're interested in being a Speaker, you can <a>Apply Here.</a> -->
+                <br>If you're interested in Sponsoring, <a>Download a Sponsor Kit.</a></p>
 
 
                 <form method="post" action="https://madglory.wufoo.com/forms/zmhocgb1i2iamc/#public">
@@ -194,7 +194,7 @@
                   <br>
                   <p><strong>Level Up</strong> will be open for registration soon. In the meantime, sign up to stay updated – that way, you'll be the first to know when registration opens.</p>
                   <p>If you're interested in being a Speaker, you can <a>Apply Here.</a>
-                  <br>If you're interested in Sponsoring, <a>Download a Press Kit.</a></p>
+                  <br>If you're interested in Sponsoring, <a>Download a Sponsor Kit.</a></p>
                   <form>
                     <div class="row">
                       <input type="text" placeholder="Full Name*" class="large" />
@@ -208,8 +208,8 @@
                 <br/>
               </div>
               <div class="row">
-                <a href="#" class="tiny button signup left alt">Press Packet</a>
-                <a href="#" class="tiny button signup right alt">Apply to Speak</a>
+                <a href="#" class="large button signup left alt">Sponsor Packet</a>
+                <!-- <a href="#" class="tiny button signup right alt">Apply to Speak</a> -->
               </div>
             </div>
           </div>
