Starting to shorten copy based on feedback from design team

--- a/index.html
+++ b/index.html
@@ -110,64 +110,78 @@
         </p>
         <hr>
         <div class="row">
-            <div class="large-4 medium-4 columns">
-              <h5 class="speakers">Cross Train</h5>
-              <h6>Twice the speakers for your buck.</h6>
-              <p class="medium">
-                Modern web designers &amp; developers must be interested and
-                involved in a wide range of subject areas to excel in their craft.  Moreover,
-                that cross-pollination of expertise is one of the driving forces behind the
-                rate of change in our craft.
-              </p>
-              <p class="medium">
-                Because of this, the topics at Level Up are purposefully varied in subject but
-                share a the common theme that each both practical and immediately applicable to
-                your everyday work.  A wide range of topics will be explored including everything
-                from server side javascript, container virtualization, and client side MVC
-                frameworks alongside topics like how innovative products can use innovative design
-                to drive interest and engagement.
-              </p>
-            </div>
-            <div class="large-4 medium-4 columns">
-              <h5 class="designers">Power Packed</h5>
-              <h6>Prepare for a knowledge bomb</h6>
-              <p class="medium">
-                The conference will happen over two days and follow a single track,
-                mixed length format.
-              </p>
-              <p class="medium">
-                Topics will be short and focused; each between 20 and 40 minutes
-                long. Each speaker will have full knowledge of those that present
-                before them, and will attempt to build off the concepts conveyed
-                by previous speakers. Plenty of time will be allotted after each
-                talk for for questions and discussion.
-              </p>
-              <p class="medium">
-                Finally, local foodies will prepare lunch and snacks each day to
-                to ensure everyone is properly satiated (and hydrated!)
-              </p>
-            </div>
-            <div class="large-4 medium-4 columns">
-              <h5 class="developers">An Intimate Experience</h5>
-              <h6>Guaranteed to meet new people</h6>
-              <p class="medium">
-                Top down we've designed Level Up to be an inspirational experience.
-                The venue is located walking distance from both the hotel and a
-                vibrant downtown district where you can eat, shop, or grab a beer
-                at any one of three dozen local pubs.
-              </p>
-              <p class="medium">
-                Attendee only social events are scheduled each
-                night to ensure that we'll get to know each other, have time to
-                discuss the topics we've learned, and have a bit of fun.
-              </p>
-              <p class="medium">
-                Last, you'll enjoy the beautiful resort town of Saratoga during
-                the peak of <a href='https://www.google.com/search?q=new+york+fall+leaves&espv=210&es_sm=119&source=lnms&tbm=isch&sa=X&ei=C0_ZUrO_DPe0sATAzoDQAw&ved=0CAcQ_AUoAQ&biw=1920&bih=1008'>New York's Fall Season</a>. (And if you enjoy the outdoors,
-                you're only a 30 minutes from the <a href='http://visitadirondacks.com/'>biggest park</a> in lower United States.)
-              </p>
-            </div>
+          <div class="large-4 medium-4 columns">
+            <h5 class="speakers">Cross Train</h5>
+            <h6>Twice the speakers for your buck.</h6>
+            <p class="medium">
+              Topics at Level Up are purposefully varied in subject but
+              share a the common theme that each both practical and immediately applicable to
+              your everyday work.  A wide range of topics will be explored including everything
+              from server side javascript, container virtualization, and client side MVC
+              frameworks alongside topics like how innovative products can use innovative design
+              to drive interest and engagement.
+            </p>
           </div>
+          <div class="large-4 medium-4 columns">
+            <h5 class="designers">Power Packed</h5>
+            <h6>Prepare for a knowledge bomb</h6>
+            <p class="medium">
+              The conference will happen over two days and follow a single track,
+              mixed length format.
+            </p>
+            <p class="medium">
+              Topics will be short and focused; each between 20 and 40 minutes
+              long. Each speaker will have full knowledge of those that present
+              before them, and will attempt to build off the concepts conveyed
+              by previous speakers. Plenty of time will be allotted after each
+              talk for for questions and discussion.
+            </p>
+          </div>
+          <div class="large-4 medium-4 columns">
+            <h5 class="developers">An Intimate Experience</h5>
+            <h6>Guaranteed to meet new people</h6>
+            <p class="medium">
+              Top down we've designed Level Up to be an inspirational experience.
+              The venue is located walking distance from both the hotel and a
+              vibrant downtown district where you can eat, shop, or grab a beer
+              at any one of three dozen local pubs.
+            </p>
+            <p class="medium">
+              Attendee only social events are scheduled each
+              night to ensure that we'll get to know each other, have time to
+              discuss the topics we've learned, and have a bit of fun.
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="large-4 medium-4 columns">
+            <h5 class="speakers">Something</h5>
+            <h6>Twice the speakers for your buck.</h6>
+            <p class="medium">
+              Modern web designers &amp; developers must be interested and
+              involved in a wide range of subject areas to excel in their craft.  Moreover,
+              that cross-pollination of expertise is one of the driving forces behind the
+              rate of change in our craft.
+            </p>
+          </div>
+          <div class="large-4 medium-4 columns">
+            <h5 class="designers">Food</h5>
+            <h6>Prepare for a knowledge bomb</h6>
+            <p class="medium">
+              Finally, local foodies will prepare lunch and snacks each day to
+              to ensure everyone is properly satiated (and hydrated!)
+            </p>
+          </div>
+          <div class="large-4 medium-4 columns">
+            <h5 class="developers">Beauty Abounds</h5>
+            <h6>Spend a few days at the springs</h6>
+            <p class="medium">
+              Last, you'll enjoy the beautiful historic resort town of Saratoga during
+              the peak of <a href='https://www.google.com/search?q=new+york+fall+leaves&espv=210&es_sm=119&source=lnms&tbm=isch&sa=X&ei=C0_ZUrO_DPe0sATAzoDQAw&ved=0CAcQ_AUoAQ&biw=1920&bih=1008'>New York's Fall Season</a>. (And if you enjoy the outdoors,
+              you're only a 30 minutes from the <a href='http://visitadirondacks.com/'>biggest park</a> in lower United States.)
+            </p>
+          </div>
+        </div>
       </div>
     </div>
     <br><br>
