Updates some copy

--- a/index.html
+++ b/index.html
@@ -108,6 +108,29 @@
         <hr>
         <div class="row">
           <div class="large-4 medium-4 columns infoblock">
+            <h5 class="workshop">Topical Topics</h5>
+            <h6>Show &amp; Tell: Personalized</h6>
+            <p class="medium">
+              A wide range of topics will be explored including everything from server side javascript, to cutting edge trends in design. Plenty of time will be allotted after each talk for for questions and discussion.
+            </p>
+          </div>
+          <div class="large-4 medium-4 columns infoblock">
+            <h5 class="experience">An Intimate Experience</h5>
+            <h6>Guaranteed to meet new people</h6>
+            <p class="medium">
+              Top down we've designed Level Up to be an inspirational experience. The venue is walking distance from both the hotel and a vibrant downtown district where you can eat, shop, or grab a beer at any one of several dozen local pubs.
+            </p>
+          </div>
+          <div class="large-4 medium-4 columns infoblock">
+            <h5 class="powerpacked">Power Packed</h5>
+            <h6>Prepare for a knowledge bomb</h6>
+            <p class="medium">
+              Talks will be short and focused; each between 20 &amp; 40 minutes long. Each speaker will have full knowledge of those that present before them, and will build off the concepts conveyed by previous speakers.
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="large-4 medium-4 columns infoblock">
             <h5 class="crosstrain">Cross Train</h5>
             <h6>Twice the speakers for your buck.</h6>
             <p class="medium">
@@ -115,33 +138,10 @@
             </p>
           </div>
           <div class="large-4 medium-4 columns infoblock">
-            <h5 class="powerpacked">Power Packed</h5>
-            <h6>Prepare for a knowledge bomb</h6>
-            <p class="medium">
-              Topics will be short and focused; each between 20 &amp; 40 minutes long. Each speaker will have full knowledge of those that present before them, and will build off the concepts conveyed by previous speakers.
-            </p>
-          </div>
-          <div class="large-4 medium-4 columns infoblock">
-            <h5 class="experience">An Intimate Experience</h5>
-            <h6>Guaranteed to meet new people</h6>
-            <p class="medium">
-              Top down we've designed Level Up to be an inspirational experience. The venue walking distance from both the hotel and a vibrant downtown district where you can eat, shop, or grab a beer at any one of three dozen local pubs. 
-            </p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="large-4 medium-4 columns infoblock">
-            <h5 class="workshop">Workshop</h5>
-            <h6>Show &amp; Tell: Personalized</h6>
-            <p class="medium">
-              A wide range of topics will be explored including everything from server side javascript, to container virtualization. Plenty of time will be allotted after each talk for for questions and discussion.
-            </p>
-          </div>
-          <div class="large-4 medium-4 columns infoblock">
             <h5 class="food">Good Eats</h5>
             <h6>Savor the Saratoga Flavor</h6>
             <p class="medium">
-              Listening to all these interesting speakers will undoubtedly make you hungry. Local foodies will prepare lunch and snacks each day to ensure you’re properly satiated (and hydrated!). 
+              It's a fact: an engaged mind can burn a lot of calories. Local foodies will prepare lunch and snacks each day to ensure you’re properly satiated (and hydrated!).
             </p>
           </div>
           <div class="large-4 medium-4 column infoblock">
