Responsive fixes and updates based on latest PSD

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="row">
         <div class="small-12 columns">
           <a href="http://twitter.com/madglory" target="_blank" class="twitter">
-            <img src="../img/twitter-icon.png" class="">
+            <img src="img/twitter-icon.png" class="">
           </a>
           <h6 class="status">Follow <a href="http://twitter.com/levelupcon">@levelupcon</a> on Twitter.</h6>
         </div>
@@ -45,11 +45,17 @@
 
             <!-- Responsive retina image media queries -->
 
-            <img src="/img/logo-lg.png" data-interchange="[/img/logo-lg.png, (default)], [/img/logo-lg@2x.png, (retina)]" class="logo" >
-            <noscript><img src="/img/logo-lg.png"></noscript>
+            <img src="img/logo-lg.png" data-interchange="[img/logo-lg.png, (default)], [img/logo-lg@2x.png, (retina)]" class="logo" >
+            <noscript><img src="img/logo-lg.png"></noscript>
             <h4 class="indent">Creative Tech Conference 2014</h4>
             <h5 class="indent">In Association with <a href="http://www.madglory.com">MadGlory</a></h5>
-            <div class="medium-4 medium-centered columns">
+            
+            <div class="row">
+              
+              <div class="large-4 columns details">October 7 &amp; 8, 2014</div>
+              <div class="large-4 large-push-4 columns details">Saratoga Springs, NY</div>
+
+              <div class="large-4 large-pull-4 columns">
 
               <!-- Sign up modal form -->
 
@@ -78,19 +84,18 @@
                 <a class="close-reveal-modal">&#215;</a>
               </div>
 
-              <!-- End Modal Form -->
-
+              <!-- End Modal Form --></div>
             </div>
-            <br>
+
       	  </div>
         </div>
       </div>
     </div>
 
+    <div class="down-arrow">
+      <img src="img/down-arrow.png" />
+    </div>
 
-
-    <br>
-    <br>
     <div class="row">
       <div class="large-12 columns callout">
         <p class="lead">
@@ -156,17 +161,21 @@
         </div>
       </div>
     </div>
-    <br><br>
 
     <div class="full-width signup">
       <div class="row">
         <div class="large-12 columns info">
           <div class="row ">
-            <div class="large-4 medium-4 columns">
+            <div class="large-4 medium-4 columns dates">
               <a href="Level_Up_Conference.ics">
-                <img src="../img/october-8.png" class="left date">
-                <!--<p><small>8am - 4pm</small></p>-->
-                <img src="../img/october-9.png" class="right date">
+                <div class="left">
+                  <img src="img/october-8.png" class="date" />
+                  <p>8:00 AM - 4:00 PM</p>
+                </div>
+                <div class="right">
+                  <img src="img/october-9.png" class="date" />
+                  <p>9:00 AM - 5:00 PM</p>
+                </div>
               </a>
             </div>
             <div class="large-4 medium-4 columns">
@@ -175,23 +184,6 @@
             <div class="large-4 medium-4 columns">
               <div class="row">
                 <a href="#" data-reveal-id="firstModal" class="large button signup">Tell me more</a>
-                <div id="firstModal" class="reveal-modal small" data-reveal>
-                  <h3><strong>The early bird gets the worm.</strong></h3>
-                  <br>
-                  <p><strong>Level Up</strong> will be open for registration soon. In the meantime, sign up to stay updated – that way, you'll be the first to know when registration opens.</p>
-                  <p>If you're interested in being a Speaker, you can <a>Apply Here.</a>
-                  <br>If you're interested in Sponsoring, <a>Download a Sponsor Kit.</a></p>
-                  <form>
-                    <div class="row">
-                      <input type="text" placeholder="Full Name*" class="large" />
-                      <input type="text" placeholder="Company Website" class="large" />
-                      <input type="text" placeholder="Email*" class="large" />
-                      <a href="#" class="large button signup">Submit</a>
-                    </div>
-                  </form>
-                  <a class="close-reveal-modal">&#215;</a>
-                </div>
-                <br/>
               </div>
               <div class="row">
                 <a href="#" class="large button signup left alt">Sponsor Packet</a>
@@ -214,12 +206,8 @@
     <div class="full-width footer">
       <div class="row">
         <div class="medium-3 medium-centered columns address">
-          <p>
-            <!-- <a href="http://www.bowtiecinemas.com/locations/criterion-cinemas-11-btx/" target="_blank"><span>Criterion Cinemas</span></a><br>
-            19 Railroad Place<br>-->
-            <a href='http://goo.gl/maps/qz3vB'>Saratoga Springs, NY</a>
-          </p>
-          <img src="../img/pinpoint.png" class="pinpoint">
+          <img src="img/pinpoint.png" class="pinpoint" />
+          <p><a href='http://goo.gl/maps/qz3vB'>Saratoga Springs, NY</a></p>
         </div>
       </div>
     </div>
