Fix dates and make them text instead of images

--- a/index.html
+++ b/index.html
@@ -169,11 +169,17 @@
             <div class="large-4 medium-4 columns dates">
               <a href="Level_Up_Conference.ics">
                 <div class="left">
-                  <img src="img/october-8.png" class="date" />
-                  <p>8:00 AM - 4:00 PM</p>
+                  <div class="date">
+                    <p>Tue, Oct.</p>
+                    <p class="day">7</p>
+                  </div>
+                  <p>9:00 AM - 5:00 PM</p>
                 </div>
                 <div class="right">
-                  <img src="img/october-9.png" class="date" />
+                  <div class="date">
+                    <p>Wed, Oct.</p>
+                    <p class="day">8</p>
+                  </div>
                   <p>9:00 AM - 5:00 PM</p>
                 </div>
               </a>
