--- a/index.html
+++ b/index.html
@@ -184,7 +184,19 @@
         <div class="large-12 columns info">
           <div class="row ">
             <div class="large-4 medium-4 columns dates">
-              <a href="Level_Up_Conference.ics">
+              <a href="http://example.com/link-to-your-event" title="Add to Calendar" class="addthisevent">
+                <span class="_start">10-08-2014 00:00:00</span>
+                <span class="_end">10-09-2014 00:00:00</span>
+                <span class="_zonecode">15</span>
+                <span class="_summary">Level Up Conference</span>
+                <span class="_description">Learn cutting edge tips and tricks to bring home and show off.</span>
+                <span class="_location">Saratoga Springs, NY, United States</span>
+                <span class="_organizer">MadGlory</span>
+                <span class="_organizer_email">hello+levelup@madgloryint.com</span>
+                <!-- <span class="_facebook_event">http://www.facebook.com/events/160427380695693</span> -->
+                <span class="_all_day_event">true</span>
+                <span class="_date_format">DD/MM/YYYY</span>
+
                 <div class="left">
                   <div class="date">
                     <p>Wed, Oct.</p>
@@ -249,6 +261,22 @@
     <script src="js/foundation.min.js"></script>
     <script src="js/foundation/foundation.interchange.js"></script>
     <script type="text/javascript" src="http://js.addthisevent.com/atemay.js"></script>
+    <!-- AddThisEvent Settings -->
+    <script type="text/javascript">
+      addthisevent.settings({
+        license   : "abt0igm10zph4s6tdmfe",
+        mouse     : false,
+        css       : false,
+        outlook   : {show:true, text:"Outlook Calendar"},
+        google    : {show:true, text:"Google Calendar"},
+        yahoo     : {show:true, text:"Yahoo Calendar"},
+        hotmail   : {show:true, text:"Hotmail Calendar"},
+        ical      : {show:true, text:"iCal Calendar"},
+        facebook  : {show:true, text:"Facebook Event"},
+        callback  : ""
+      });
+    </script>
+
     <script>
       $(document).foundation();
 
