Adds calendar links

--- a/index.html
+++ b/index.html
@@ -184,18 +184,10 @@
         <div class="large-12 columns info">
           <div class="row ">
             <div class="large-4 medium-4 columns dates">
-              <a href="http://example.com/link-to-your-event" title="Add to Calendar" class="addthisevent">
-                <span class="_start">10-08-2014 00:00:00</span>
-                <span class="_end">10-09-2014 00:00:00</span>
-                <span class="_zonecode">15</span>
-                <span class="_summary">Level Up Conference</span>
-                <span class="_description">Learn cutting edge tips and tricks to bring home and show off.</span>
-                <span class="_location">Saratoga Springs, NY, United States</span>
-                <span class="_organizer">MadGlory</span>
-                <span class="_organizer_email">hello+levelup@madgloryint.com</span>
-                <!-- <span class="_facebook_event">http://www.facebook.com/events/160427380695693</span> -->
-                <span class="_all_day_event">true</span>
-                <span class="_date_format">DD/MM/YYYY</span>
+              <a
+                href="http://ate.so/?Qk3QeHA"
+                title="Add to Calendar"
+                data-track="_gaq.push(['_trackEvent','AddThisEvent','click','ate-calendar'])">
 
                 <div class="left">
                   <div class="date">
