--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <h5 class="workshop">Topical Topics</h5>
             <h6>Show &amp; Tell: Personalized</h6>
             <p class="medium">
-              A wide range of topics will be explored including everything from server side javascript, to cutting edge trends in design. Plenty of time will be allotted after each talk for for questions and discussion.
+              A wide range of topics will be explored including everything from server side javascript, to cutting edge trends in design. Plenty of time will be allotted after each talk for questions and discussion.
             </p>
           </div>
           <div class="large-4 medium-4 columns infoblock">
