--- a/index.html
+++ b/index.html
@@ -114,8 +114,7 @@
       <div class="row">
         <div class="large-12 columns callout">
           <p class="lead">
-            Level Up is a creative tech conference where you'll explore
-            the latest trends in web design &amp; development with a focus
+            Level Up is a creative tech conference held in the beautiful autumn season of upstate New York. At the conference, you'll explore the latest trends in web design &amp; development with a focus
             on topics that are practical and immediately valuable to
             your everyday work.<!-- You'll meet interesting people, make new friends,
             and learn new skills you can show off at home. -->
@@ -133,7 +132,7 @@
         <div class="row">
           <div class="large-4 medium-4 columns infoblock">
             <h5 class="workshop">Topical Topics</h5>
-            <h6>Show &amp; Tell: Personalized</h6>
+            <h6>Show &amp; tell: personalized</h6>
             <p class="medium">
               A wide range of topics will be explored including everything from server side javascript, to cutting edge trends in design. Plenty of time will be allotted after each talk for questions and discussion.
             </p>
@@ -163,7 +162,7 @@
           </div>
           <div class="large-4 medium-4 columns infoblock">
             <h5 class="food">Good Eats</h5>
-            <h6>Savor the Saratoga Flavor</h6>
+            <h6>Savor the Saratoga flavor</h6>
             <p class="medium">
               It's a fact: an engaged mind can burn a lot of calories. Local foodies will prepare lunch and snacks each day to ensure you’re properly satiated (and hydrated!).
             </p>
