Changed main call to action button

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
               <!-- Sign up modal form -->
 
-              <a href="#" data-reveal-id="firstModal" class="large button signup">Tell me more</a>
+              <a href="#" data-reveal-id="firstModal" class="large button signup">Keep Me Updated</a>
               <div id="firstModal" class="reveal-modal small" data-reveal>
                 <h3><strong>The early bird gets the worm.</strong></h3>
                 <br>
@@ -209,7 +209,7 @@
             </div>
             <div class="large-4 medium-4 columns">
               <div class="row">
-                <a href="#" data-reveal-id="firstModal" class="large button signup">Tell me more</a>
+                <a href="#" data-reveal-id="firstModal" class="large button signup">Keep Me Updated</a>
               </div>
               <div class="row">
                 <a href="#" class="large button signup left alt">Sponsor Packet</a>
